--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -8,3 +8,8 @@ ja:
       login: "ログイン"
       create_page: "登録ページへ"
       password_forget: "パスワードをお忘れの方はこちら"
+  time:
+    formats:
+      default: "%Y/%m/%d %H:%M:%S"
+      long: "%Y年%m月%d日(%a) %H時%M分%S秒 %z"
+      short: "%y/%m/%d %H:%M"
