--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -13,3 +13,8 @@ ja:
       default: "%Y/%m/%d %H:%M:%S"
       long: "%Y年%m月%d日(%a) %H時%M分%S秒 %z"
       short: "%y/%m/%d %H:%M"
+  boards:
+    new:
+      boards_create: '掲示板作成'
+      boards_title: 'タイトル'
+      boards_text: '本文'
