--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -10,8 +10,11 @@ ja:
         last_name: "姓"
         email: "メールアドレス"
         password: "パスワード"
-        Password_confirmation: "パスワード確認"
+        password_confirmation: "パスワード確認"
         file: "プロフィール画像"
         crypted_password: "パスワード"
         created_at: "作成日"
         updated_at: "更新日"
+      board:
+        title: タイトル
+        body: 本文
