--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -15,7 +15,7 @@ ja:
       long: '%Y年%m月%d日(%a) %H時%M分%S秒 %z'
       short: '%y/%m/%d %H:%M'
   boards:
-    new:
+    form:
       boards_create: '掲示板作成'
       boards_title: 'タイトル'
       boards_text: '本文'
